# ProtoDeep

./: .gitignore  LICENSE  README.md  main.py  poc.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/workflows/: python.yml
protodeep/: __init__.py  cli.py  errors.py  internals.py  lib.py  protodeep.py  utils.py
protodeep/blackboxprotobuf/: __init__.py
protodeep/blackboxprotobuf/lib/: exceptions.py  protofile.py
protodeep/blackboxprotobuf/lib/types/: fixed.py  length_delim.py  type_maps.py  varint.py
protodeep/modules/: analyze.py
test/: cli_test.py  lib_test.py
test/data/: README.md  bad_utf8_string.b64  bad_utf8_string.hex  bad_utf8_string.protoc  bad_utf8_string.txt  golden_message_proto3.b64  golden_message_proto3.hex  golden_message_proto3.protoc  golden_message_proto3.txt
