[project]
name = "protodeep"
version = "1.0.3"
authors = [
    {name = "mxrch", email = "mxrch.dev@pm.me"},
]
description = "A tool to help reversing protobuf."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["protobuf", "reverse"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
protodeep = "protodeep.protodeep:main"

[tool.setuptools.packages.find]
include = ["protodeep", "protodeep.*"]